--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "express-handlebars": "^5.3.5"
+    "express-handlebars": "^5.3.5",
+    "mongodb": "^5.6.0"
   }
 }
